--- a/package.json
+++ b/package.json
@@ -13,21 +13,29 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.22.2",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.2.1",
+    "terser": "^5.37.0",
     "uuid": "^11.0.5",
+    "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -38,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
