--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
@@ -46,6 +46,8 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "supabase": "^2.12.1",
+    "supabase-cli": "^0.0.21",
     "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
